@@ -25,6 +25,8 @@
  * Command 'scrollforward' will skip a border if this is less than a fraction of the screen; this smoothes up documents reading. The fraction is one over '_scroll_skip_page_fraction', if >1; 1/16 if 1, no tolerance if <1.
 # (r1156)
  * Commands  scale '<'  /  scale '>' will shrink/magnify the image using cached mipmaps.
+# (r1226)
+ * Autocommand "PostInteractiveCommand" does not trigger anymore after 'quit' command.
 # (r1196)
  * In case of CBZ,CBR,PDF,PS,DVI file, fimgs script will use '--autotop --autowidth'.
 # (r1153,1154,1195)
